# CMU-10-714-Deep-Learning-Systems-Assignments

./: README.md  main.py  pyproject.toml
hw0/: Makefile  hw0.ipynb
hw0/src/: simple_ml.py  simple_ml_ext.cpp
